src/test/resources/semantic/error/TC_ERROR_IGUALES_PARAMETROS_METODO.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 11 | COLUMNA 8 | Metodo m1 contiene argumentos formales con iguales identificadores |
/? Los identificadores utilizados en la lista de parametros formales deben ser distintos

struct A{

}

impl A{
    fn m1(Int a, Str a, Char a)-> Int{
    
    }
}
start{

}